# TeamTalk_old

./: .gitignore  README.md
android/: build.gradle
android/app/: build.gradle
android/mgimlibs/: build.gradle
auto_setup/mariadb/conf/: ttopen.sql
auto_setup/nginx_php/php/: setup.sh
doc/: 使用VS2017开发LinuxC++.md  服务器RestAPI.md
docker/: .Dockerfile.swp  .gitignore  Dockerfile  build.sh  docker_build.sh  docker_run.sh
ios/: Podfile
ios/TeamTalk/: Info.plist
ios/TeamTalk.xcodeproj/: project.pbxproj
ios/TeamTalk/Entity/: MTTUserEntity.m
ios/TeamTalk/Exist/Voice/manager/: PlayerManager.m  RecorderManager.mm
ios/TeamTalk/Module/TCPAPI/: HasOfflineFileAPI.m  MTTUsersStatAPI.m
ios/TeamTalk/ViewController/Contacts/: ContactsViewController.m
ios/TeamTalk/ViewController/RecentContacts/: RecentUsersViewController.m
php/application/controllers/: group.php  user.php
php/application/views/base/: group.php
server/cfg/: dbproxyserver.conf  loginserver.conf  msfs.conf  msgserver.conf  setcfg.sh  websocket_server.conf
server/run/: restart.sh  stop.sh
server/src/: .gitignore  README.md  README_ubuntu.md  build.sh  build_mac.sh  mac_make_log4cxx.sh  make_hiredis.sh  make_log4cxx.sh  make_mariadb.sh  make_protobuf.sh  sync_lib_for_zip.sh  ubuntu_install_mysql.sh  ubuntu_make_log4cxx.sh
server/src/base/: BaseSocket.h  CMakeLists.txt  SSLSocket.cpp  SSLSocket.h  imconn.cpp  imconn.h  netlib.cpp  netlib.h
server/src/base/slog/: slog_api.h
server/src/db_proxy_server/: CMakeLists.txt  CMakeSettings.json  DBPool.cpp  DBPool.h
server/src/db_proxy_server/business/: InterLogin.cpp  Login.cpp
server/src/file_server/: CMakeLists.txt
server/src/http_msg_server/: CMakeLists.txt  HttpQuery.cpp
server/src/login_server/: CMakeLists.txt  login_server.cpp
server/src/msfs/: CMakeLists.txt  CMakeSettings.json  main.cpp
server/src/msg_server/: CMakeLists.txt  CMakeSettings.json  MsgConn.cpp  msgserver.conf
server/src/push_server/: CMakeLists.txt
server/src/route_server/: CMakeLists.txt  CMakeSettings.json
server/src/slog/: CMakeLists.txt  CMakeSettings.json
server/src/test/: .gitignore  Client.cpp  ClientConn.cpp  ClientConn.h  Makefile  test_client.cpp
server/src/websocket_server/: .gitignore  CMakeLists.txt  CMakeSettings.json  websocket_server.conf  websocket_server.cpp
websocket_client/: index.html
websocket_client/js/: my-app.js
win-client/: README.md
win-client/core/DuiLib/: DuiLib.vcxproj
win-client/core/network/: BaseSocket.cpp  network.vcxproj
win-client/core/utility/: utilStrCodingAPI.cpp  utility.vcxproj
win-client/include/network/: imconn.h  util.h
win-client/src/GifSmiley/: GifSmiley2003.vcxproj
win-client/src/Modules/: Modules.vcxproj
win-client/src/teamtalk/: teamtalk.cpp  teamtalk.vcxproj
win_him_sdk/: win_him_sdk.sln
win_him_sdk/robot/: robot.cpp  robot.vcxproj  robot.vcxproj.filters
win_him_sdk/win_him_sdk/: log4cxx.properties  win_him_sdk.vcxproj  win_him_sdk.vcxproj.filters
win_him_sdk/win_him_sdk/api/: client.h  him_sdk_dll.h  iclient.h  ihttp_client.h  log.h
win_him_sdk/win_him_sdk/src/: client_imp.cpp  client_imp.h  client_imp_init.cpp
win_him_sdk/win_him_sdk/src/http/: http_client_imp.cpp  http_client_imp.h
win_him_sdk/win_him_sdk/src/log/: log.cpp
win_him_sdk/win_him_sdk/src/network/: PBHeader.cpp  PBHeader.h  UtilPdu.cpp  UtilPdu.h
